crates/sv2-syntax/tests/snapshots/parser__a_braced_package_body_holds_its_elements.snap
---
source: crates/sv2-syntax/tests/parser.rs
assertion_line: 84
expression: render(&parsed.syntax())
---
RootNamespace
  PackageMember
    MemberPrefix
    Package
      PackageDeclaration
        KwPackage "package"
        Whitespace " "
        Identification
          BasicName "Outer"
      Whitespace " "
      PackageBody
        LBrace "{"
        Whitespace " "
        PackageMember
          MemberPrefix
          Package
            PackageDeclaration
              KwPackage "package"
              Whitespace " "
              Identification
                BasicName "Inner"
            PackageBody
              Semicolon ";"
        Whitespace " "
        RBrace "}"
