crates/sv2-syntax/tests/snapshots/parser__a_part_definition_is_a_package_member.snap
---
source: crates/sv2-syntax/tests/parser.rs
assertion_line: 745
expression: render(&parsed.syntax())
---
RootNamespace
  PackageMember
    MemberPrefix
      VisibilityIndicator
        KwPublic "public"
    Whitespace " "
    PartDefinition
      OccurrenceDefinitionPrefix
      KwPart "part"
      Whitespace " "
      KwDef "def"
      Whitespace " "
      Definition
        DefinitionDeclaration
          Identification
            BasicName "Vehicle"
        DefinitionBody
          Semicolon ";"
