crates/sv2-syntax/tests/snapshots/parser__a_short_name_is_parsed_before_the_declared_name.snap
---
source: crates/sv2-syntax/tests/parser.rs
assertion_line: 99
expression: render(&parsed.syntax())
---
RootNamespace
  PackageMember
    MemberPrefix
    Package
      PackageDeclaration
        KwPackage "package"
        Whitespace " "
        Identification
          Lt "<"
          BasicName "V"
          Gt ">"
          Whitespace " "
          BasicName "Vehicle"
      PackageBody
        Semicolon ";"
