crates/sv2-syntax/tests/snapshots/parser__an_empty_package_body_is_a_semicolon.snap
---
source: crates/sv2-syntax/tests/parser.rs
assertion_line: 42
expression: render(&parsed.syntax())
---
RootNamespace
  Package
    PackageDeclaration
      KwPackage "package"
      Whitespace " "
      Identification
        BasicName "Vehicle"
    PackageBody
      Semicolon ";"
