crates/sv2-syntax/tests/snapshots/parser__trivia_is_attached_to_the_tree_not_skipped.snap
---
source: crates/sv2-syntax/tests/parser.rs
assertion_line: 92
expression: render(&parsed.syntax())
---
RootNamespace
  SingleLineNote "// note"
  Whitespace "\n"
  PackageMember
    MemberPrefix
    Package
      PackageDeclaration
        KwPackage "package"
        Whitespace "  "
        Identification
          BasicName "P"
      Whitespace " "
      PackageBody
        Semicolon ";"
  Whitespace "\n"
